Fixed footer gap
@haldunanil check it out

--- a/static/nologin/css/styles.css
+++ b/static/nologin/css/styles.css
@@ -124,6 +124,7 @@ body {
   width: 100%;
   text-align: center;
   padding-top: 0px;
+  margin-top: 100%;
 }
 
 .homepage-footer > ul {
